<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LevelSelectorActivity">

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elige_tu_desaf_o"
        android:textColor="#9AB7B7B7"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#B2DFDB"
        android:text="@string/f_cil"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLevel" />

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFECB3"
        android:text="@string/normal"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy"

        />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFCDD2"
        android:text="@string/dif_cil"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVeryHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNormal" />

    <Button
        android:id="@+id/btnVeryHard"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#D1C4E9"
        android:text="@string/muy_dif_cil"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHard" />


</androidx.constraintlayout.widget.ConstraintLayout>